# python-overkiz-api

./: .gitignore  .pre-commit-config.yaml  .pylintrc  AGENTS.md  README.md  V2_REVIEW.md  mkdocs.yml  mypy.ini  notes.md  pyproject.toml  research.md  setup.cfg  setup.py  test.py  test_queue_example.py  tox.ini
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  dependabot.yml  release-drafter.yml
.github/workflows/: codeql-analysis.yml  codeql.yml  docs.yml  generate-enums.yml  lint.yaml  main.yaml  pr-labeler.yml  publish-pypi-test.yml  publish-pypi.yml  release-drafter.yml  release.yml  test.yml
api_doc/: tahoma_api.html
benchmarks/: __init__.py  bench_structuring.py
docs/: action-queue.md  authentication.md  callable_names.txt  contribute.md  core-concepts.md  development-utils.md  device-control.md  device-types.md  error-handling.md  event-handling.md  getting-started.md  index.md  jquery-1.10.2-ui.js  migration-v2.md  resiliency.md  sdk-reference.md  tahoma_api.html  troubleshooting.md  ui-profiles.md
docs/api/: apiDocStyle.css  index.html  jquery-1.10.2.js  jquery-ui.min.js
docs/data/: hi_kumo_europe.json
docs/superpowers/plans/: 2026-04-24-diagnostics.md  2026-07-04-somfy-multisite.md
docs/superpowers/specs/: 2026-04-24-diagnostics-design.md  2026-07-04-somfy-multisite-design.md
pyhoma/: client.py  const.py  enums.py  exceptions.py  models.py
pyhoma/enum/: command.py  gateway.py  state.py  ui.py
pyhoma/enums/: command.py  general.py  state.py  ui.py
pyoverkiz/: __init__.py  _case.py  action_queue.py  auth.py  client.py  client_settings.py  const.py  converter.py  converters.py  exceptions.py  models.py  obfuscate.py  overkiz.py  pkce.py  response_handler.py  serializers.py  types.py  utils.py
pyoverkiz/auth/: __init__.py  base.py  bob.py  credentials.py  factory.py  strategies.py
pyoverkiz/clients/: atlantic_cozytouch.py  atlantic_cozytouch_client.py  default.py  nexity.py  nexity_client.py  overkiz.py  simple_client.py  somfy.py  somfy_client.py  somfy_local.py
pyoverkiz/enums/: __init__.py  api.py  base.py  command.py  execution.py  gateway.py  general.py  measured_value_type.py  protocol.py  server.py  state.py  ui.py  ui_profile.py
pyoverkiz/servers/: atlantic_cozytouch.py  default.py  nexity.py  overkiz_server.py  somfy.py
scripts/: generate_local_token.py  rexel_developer_mode.py  test_error_handling.py
tahoma/: client.py  exceptions.py
tahoma_api/: __init__.py  client.py  models.py
tahoma_api/devices/: roller_shutter.py  tahoma_device.py
tests/: __init__.py  conftest.py  devices.json  helpers.py  test_action_queue.py  test_auth.py  test_case.py  test_client.py  test_client_queue_integration.py  test_client_settings.py  test_converters.py  test_enums.py  test_models.py  test_obfuscate.py  test_rts_injection.py  test_serializers.py  test_ui_profile.py  test_utils.py
tests/fixtures/action_groups/: action-group-cozytouch.json  action-group-tahoma-box-v1.json  action-group-tahoma-classic-v2.json  action-group-tahoma-switch.json
tests/fixtures/endpoints/: device-states.json  events-register.json  exec-apply.json  exec-schedule.json  history-executions.json  setup-options-developerMode.json  setup-options.json  setup-places.json
tests/fixtures/event/: events.json  local_events.json
tests/fixtures/exceptions/cloud/: 401-not-authenticated.json  502-bad-gateway.html  503-maintenance.html  access-denied-to-gateway.json  action-group-setup-not-found.json  application-not-allowed.json  bad-credentials.json  exec-queue-full.json  invalid-event-listener-id.json  invalid-token.json  missing-api-key.json  no-overkiz-user.json  no-such-action-group.json  no-such-command.json  no-such-controllable.json  no-such-resource.json  no-such-ui-profile.json  not-such-token.json  resource-access-denied-device-setup-mismatch.json  resource-access-denied-gateway-not-in-setup.json  session-and-bearer.json  too-many-attempts-banned.json  too-many-concurrent-requests.json  too-many-executions.json  too-many-requests.json  unknown-auth-error.json  unknown-resource-access-denied.json  unknown-user-account.json
tests/fixtures/exceptions/local/: 204-no-corresponding-execId.json  400-action-group-setup-not-found.json  400-bad-parameters.json  400-bus-error.json  400-duplicate-action-on-device.json  400-malformed-action-group.json  400-malformed-fetch-id.json  400-missing-execution-id.json  400-missing-parameters.json  400-no-registered-event-listener.json  400-no-such-device.json  400-unknown-object.json  400-unspecified-error.json  401-missing-authorization-token.json  401-not-authenticated.json  no-registered-event-listener.json
tests/fixtures/exec/: current-single.json  current-tahoma-switch.json
tests/fixtures/setup/: setup_3_gateways.json  setup_cozytouch.json  setup_cozytouch_2.json  setup_cozytouch_3.json  setup_cozytouch_4.json  setup_cozytouch_v2.json  setup_hi_kumo.json  setup_hi_kumo2.json  setup_hi_kumo_2.json  setup_hi_kumo_8_gateways.json  setup_hue_and_low_speed.json  setup_local.json  setup_local_tahoma.json  setup_local_tahoma_sonos.json  setup_local_with_climate.json  setup_nexity.json  setup_nexity_2.json  setup_rexel.json  setup_tahoma_1.json  setup_tahoma_3.json  setup_tahoma_be.json  setup_tahoma_climate.json  setup_tahoma_daikin.json  setup_tahoma_intellitag.json  setup_tahoma_oceania.json  setup_tahoma_pro.json  setup_tahoma_siren.json  setup_tahoma_siren_io.json  setup_tahoma_siren_rtd.json
tools/: somfy_multisite_smoke.py
utils/: fetch_server_data.py  generate_device_catalog.py  generate_enums.py  mask_fixtures.py
