[project]
name = "pyoverkiz"
version = "1.19.4"
description = "Async Python client to interact with internal OverKiz API (e.g. used by Somfy TaHoma)."
readme = "README.md"
authors = [
    {name = "Mick Vleeshouwer", email = "mick@imick.nl"},
    {name = "Vincent Le Bourlot"},
    {name = "Thibaut Etienne"},
]
license = {text = "MIT"}
requires-python = "<4.0,>=3.10"
packages = [
    { include = "pyoverkiz" }
]
dependencies = [
    "aiohttp<4.0.0,>=3.10.3",
    "pyhumps<4.0.0,>=3.8.0",
    "backoff<3.0,>=1.10.0",
    "attrs>=21.2",
    "boto3<2.0.0,>=1.18.59",
    "warrant-lite<2.0.0,>=1.0.4",
    "backports-strenum<2.0.0,>=1.2.4; python_version < \"3.11\"",
]

[project.urls]
homepage = "https://github.com/iMicknl/python-overkiz-api"
repository = "https://github.com/iMicknl/python-overkiz-api"

[dependency-groups]
dev = [
    "tox<5.0.0,>=4.17.1",
    "pytest>=8.3.2,<10.0.0",
    "pytest-cov>=5,<8",
    "pre-commit<5.0,>=3.8",
    "pytest-asyncio>=0.23.8,<1.4.0",
    "ruff>=0.12.0",
    "mypy>=1.16.1",
    "ty>=0.0.8",
]

[tool.ruff.lint]
select = [
    # pydocstyle
    "D",
    # flake8-async
    # "ASYNC",
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # ruff
    "RUF",
]
ignore = ["E501"] # Line too long

[tool.ruff.lint.pydocstyle]
convention = "google"  # Accepts: "google", "numpy", or "pep257".

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
  "pyoverkiz/*",
]

[tool.hatch.build.targets.wheel]
packages = ["pyoverkiz"]
only-packages = true

[tool.mypy]
exclude = ["tests/"]
ignore_missing_imports = true

[tool.ty.src]
exclude = ["tests/"]
